# lunchmoney-fintoc-api

./: .dockerignore  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  README.md  config.example.json  docker-compose.yml  package-lock.json  package.json  server.js
docker/: README.md  docker-run.sh
k8s/: deployment.yaml
src/: categorize.js  config.js  fetchFintoc.js  fetchGmail.js  fetchLM.js  learnLunchMoney.js  memory.js  sync.js  utils.js
