[package]
name = "lunchmoney-fintoc"
version = "0.2.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime"] }
hyper-tls = "0.5"
tokio = { version = "1.20", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rusty-money = "0.4.1"
csv = "1.1"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.13"
dialoguer = "0.11"
machine-uid = "0.5"
toml = "0.8.14"
config = { version = "0.14.0", features = ["toml"] }
colored = "2.1.0"
indicatif = "0.17.8"
num-format = "0.4.4"
currency_rs = "1.3.0"
